# babel

./: .gitignore  CMakeLists.txt  README.md  conanbuildinfo.cmake  conanfile.txt  qt.conf
img/: image.qrc
src/client/: AAudio.cpp  AAudio.hpp  ACodec.cpp  ACodec.hpp  IAudio.hpp  ICodec.hpp  MyAudio.cpp  MyAudio.hpp  Sound.cpp  Sound.hpp  SoundSettings.hpp  Udp.cpp  Udp.hpp
src/client/QtDisplay/: Display.cpp  Display.h  Display.ui  babel.pro  main.cpp
src/server/: Message.hpp  TcpConnection.hpp  TcpServer.hpp  main.cpp  protocol
